# densearray

./: COPYRIGHT.txt  Cargo.toml  README.md  build.rs
kernels/: Cargo.toml  build.rs  cast.c  lib.h  lib.rs  reduce.c  vector.c
src/: io.rs  kernels.rs  lib.rs  linalg.rs  parallel_linalg.rs  prelude.rs  serial.rs
