[package]
name = "densearray"
version = "0.1.0"
authors = ["Peter Jin <peterhaijin@gmail.com>"]
license = "BSD-2-Clause"
description = "N-dimensional dense arrays."
repository = "https://github.com/peterhj/libdensearray"
keywords = ["array", "ndarray", "dense", "tensor", "linear", "algebra"]
readme = "README.md"

[lib]
name = "densearray"
path = "src/lib.rs"

[dependencies]
densearray_kernels = { path = "kernels", version = "0.0.1" }
byteorder = "^0.5"
openblas_ffi = "^0.1"
